# iberifier

./: .gitignore  README.md  backward_stats.txt  db_stats.js  pipeline.sh  pyproject.toml  requirements.txt
LUSA/: parsexmls.py
STS/: README.md  dates_STS_filter.py  mongo_commands.js  results.txt  sts_model_eval.py
analysis/: Descriptive stats.ipynb  Selected_plots.ipynb  collect_info.py  dump_collections_range_date.py  random_sample_pipeline.py  time_descriptive.ipynb
api_google/: sample.jsonl  use_api.py
api_maldita/: sample.jsonl  use_api.py
api_twitter/: api_twitter.py  search_from_keys.py
classification/: README.md  classify_db.py  compare_sts_models.sh  compare_sts_models_finer.sh  compare_te_models.sh  dates_STS_filter.py  results_ontopic.txt  results_relevant.txt  results_sts_finer.txt  sts_finer_classification.py  sts_model_eval.py  te_finer_classification.py
config/: config.yaml  config_logger.yaml
data/: sample_claim_tweets.jsonl
evaluation/: README.md  evaluate_classification.py  evaluate_pipeline.py  iberifier_eval_1.jsonl  iberifier_eval_2.jsonl  iberifier_eval_3.jsonl  pairs_second_round.py  pairs_to_evaluate.py  postprocess_evaluation.py  postprocess_for_classification.py  second_round.jsonl  third_round.jsonl
feeder_twitter/: keyword_processor.py  keywords_pass.py
generate_keywords/: custom_ner.py  entities_extraction.py  keyword_generation.py  keyword_processor.py  language_detector.py
meneame/: .gitignore  package-lock.json  package.json
mongo_utils/: creating_indexes.py  mongo_utils.py
mynews/: BD_DIGITALMEDIA_SPAIN_2021.csv  (+9 more)
(+84 files in other folders)
